rename example names
Example name begins with q if and only if it is intended to be a script to be
installed.

--- a/examples-cpp/Makefile
+++ b/examples-cpp/Makefile
@@ -2,27 +2,28 @@ SHELL=/usr/bin/env bash
 
 mpi_options ?= --oversubscribe --bind-to none
 
-tests = qlat-vector-utils \
-		qlat-fft-tests \
-		qlat-smear-tests \
-		qcd-utils-tests \
-		lbl-muon-part \
-		rng-state-tests \
-		field-rng-tests \
-		mixed-size-cg \
-		benchmark \
-		dist-io \
-		selected-field \
-		fields-io \
-		fields-io-simple-demo \
-		simple-1 \
-		hmc \
-		flowed-hmc \
-		heatbath \
-		template \
-		dslash-tests \
-		propagators \
-		ldouble
+tests = \
+				vector-utils \
+				fft-tests \
+				smear-tests \
+				gf-utils-tests \
+				lbl-muon-part \
+				rng-state-tests \
+				field-rng-tests \
+				mixed-size-cg \
+				benchmark \
+				dist-io \
+				selected-field \
+				fields-io \
+				fields-io-simple-demo \
+				simple-1 \
+				hmc \
+				flowed-hmc \
+				heatbath \
+				template \
+				dslash-tests \
+				propagators \
+				ldouble
 
 all: run
 
