--- a/.github/workflows/qlat.yml
+++ b/.github/workflows/qlat.yml
@@ -54,6 +54,22 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v4
 
+  build_nix_ubuntu_clang:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: cachix/install-nix-action@v30
+    - name: Build qlat
+      run: nix-build nixpkgs/q-pkgs.nix -A pkgs-std-clang-ucxless.qlat-env -j 1 --cores 3
+    - name: Test qlat
+      run: nix-build nixpkgs/q-pkgs.nix -A pkgs-std-clang-ucxless.qlat-tests -j 1 --cores 3
+    - name: Build qlat with GPT and CPS
+      run: nix-build nixpkgs/q-pkgs.nix -A pkgs-clang-ucxless.qlat-env -j 1 --cores 3
+    - name: Test qlat with GPT and CPS
+      run: nix-build nixpkgs/q-pkgs.nix -A pkgs-clang-ucxless.qlat-tests -j 1 --cores 3
+    - name: Build qlat with jhub-env
+      run: nix-build nixpkgs/q-pkgs.nix -A pkgs-clang-ucxless.qlat-jhub-env -j 1 --cores 3
+
   build_qlat_ubuntu:
     runs-on: ubuntu-latest
     steps:
@@ -338,9 +354,31 @@ jobs:
     - uses: actions/checkout@v4
     - uses: cachix/install-nix-action@v30
     - name: Build qlat
+      run: nix-build nixpkgs/q-pkgs.nix -A pkgs-std-ucxless.qlat-env -j 1 --cores 3
+    - name: Test qlat
+      run: nix-build nixpkgs/q-pkgs.nix -A pkgs-std-ucxless.qlat-tests -j 1 --cores 3
+    - name: Build qlat with GPT and CPS
+      run: nix-build nixpkgs/q-pkgs.nix -A pkgs-ucxless.qlat-env -j 1 --cores 3
+    - name: Test qlat with GPT and CPS
+      run: nix-build nixpkgs/q-pkgs.nix -A pkgs-ucxless.qlat-tests -j 1 --cores 3
+    - name: Build qlat with jhub-env
+      run: nix-build nixpkgs/q-pkgs.nix -A pkgs-ucxless.qlat-jhub-env -j 1 --cores 3
+
+  build_nix_mac_clang:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v4
+    - uses: cachix/install-nix-action@v30
+    - name: Build qlat
       run: nix-build nixpkgs/q-pkgs.nix -A pkgs-std-clang-ucxless.qlat-env -j 1 --cores 3
     - name: Test qlat
       run: nix-build nixpkgs/q-pkgs.nix -A pkgs-std-clang-ucxless.qlat-tests -j 1 --cores 3
+    - name: Build qlat with GPT and CPS
+      run: nix-build nixpkgs/q-pkgs.nix -A pkgs-clang-ucxless.qlat-env -j 1 --cores 3
+    - name: Test qlat with GPT and CPS
+      run: nix-build nixpkgs/q-pkgs.nix -A pkgs-clang-ucxless.qlat-tests -j 1 --cores 3
+    - name: Build qlat with jhub-env
+      run: nix-build nixpkgs/q-pkgs.nix -A pkgs-clang-ucxless.qlat-jhub-env -j 1 --cores 3
 
   build_qlat_mac:
     runs-on: macos-latest
