--- a/.github/workflows/qlat.yml
+++ b/.github/workflows/qlat.yml
@@ -358,11 +358,11 @@ jobs:
     - name: Test qlat
       run: nix-build nixpkgs/q-pkgs.nix -A pkgs-std-ucxless.qlat-tests -j 1 --cores 3
     - name: Build qlat with GPT and CPS
-      run: nix-build nixpkgs/q-pkgs.nix -A pkgs-ucxless.qlat-env -j 1 --cores 3
+      run: nix-build nixpkgs/q-pkgs.nix -A pkgs-cpsless-ucxless.qlat-env -j 1 --cores 3
     - name: Test qlat with GPT and CPS
-      run: nix-build nixpkgs/q-pkgs.nix -A pkgs-ucxless.qlat-tests -j 1 --cores 3
+      run: nix-build nixpkgs/q-pkgs.nix -A pkgs-cpsless-ucxless.qlat-tests -j 1 --cores 3
     - name: Build qlat with jhub-env
-      run: nix-build nixpkgs/q-pkgs.nix -A pkgs-ucxless.qlat-jhub-env -j 1 --cores 3
+      run: nix-build nixpkgs/q-pkgs.nix -A pkgs-cpsless-ucxless.qlat-jhub-env -j 1 --cores 3
 
   build_nix_mac_clang:
     runs-on: macos-latest
@@ -374,11 +374,11 @@ jobs:
     - name: Test qlat
       run: nix-build nixpkgs/q-pkgs.nix -A pkgs-std-clang-ucxless.qlat-tests -j 1 --cores 3
     - name: Build qlat with GPT and CPS
-      run: nix-build nixpkgs/q-pkgs.nix -A pkgs-clang-ucxless.qlat-env -j 1 --cores 3
+      run: nix-build nixpkgs/q-pkgs.nix -A pkgs-cpsless-clang-ucxless.qlat-env -j 1 --cores 3
     - name: Test qlat with GPT and CPS
-      run: nix-build nixpkgs/q-pkgs.nix -A pkgs-clang-ucxless.qlat-tests -j 1 --cores 3
+      run: nix-build nixpkgs/q-pkgs.nix -A pkgs-cpsless-clang-ucxless.qlat-tests -j 1 --cores 3
     - name: Build qlat with jhub-env
-      run: nix-build nixpkgs/q-pkgs.nix -A pkgs-clang-ucxless.qlat-jhub-env -j 1 --cores 3
+      run: nix-build nixpkgs/q-pkgs.nix -A pkgs-cpsless-clang-ucxless.qlat-jhub-env -j 1 --cores 3
 
   build_qlat_mac:
     runs-on: macos-latest
