--- a/examples-py/Makefile
+++ b/examples-py/Makefile
@@ -3,63 +3,64 @@ SHELL=/usr/bin/env bash
 mpi_options ?= --oversubscribe --bind-to none
 
 tests = \
-				qcalc-psel-closest-dis-sqr.log \
-				qconvert-psel-txt-to-lati.log \
-				auto-cexprs.log \
-				auto-cexprs-more.log \
-				auto-cexprs-kpipi.log \
-				auto-cexprs-kpipi-qed.log \
-				auto-cexprs-uu.log \
-				auto-cexprs-cy.log \
-				auto-cexprs-more-cy.log \
-				auto-cexprs-kpipi-cy.log \
-				auto-cexprs-kpipi-qed-cy.log \
-				auto-cexprs-uu-cy.log \
-				auto-cexprs-distillation.log \
-				auto-contract-01.log \
-				auto-contract-02.log \
-				auto-contract-03.log \
-				auto-contract-04.log \
-				auto-contract-05.log \
-				auto-contract-06.log \
-				auto-contract-07.log \
-				mat-op-distillation.log \
-				mat-op-qcd.log \
-				check-id-node.log \
-				set-rand.log \
-				utils.log \
-				benchmark-matrix-functions.log \
-				make-sample-gauge-field.log \
-				selected-convert-io.log \
-				lat-io.log \
-				lat-io-test1.log \
-				lat-io-test2.log \
-				jackknife-random.log \
-				jackknife-super.log \
-				jackknife-random-bench.log \
-				field-utils.log \
-				field-analysis.log \
-				field-multi-size.log \
-				field-selection.log \
-				fields-io.log \
-				fsel-psel.log \
-				psel-split.log \
-				selected-field.log \
-				test-qar.log \
-				hmc-pure-gauge.log \
-				hmc-pure-gauge-flowed.log \
-				hmc-pure-gauge-test.log \
-				hmc-pure-gauge-flowed-test.log \
-				hmc-pure-gauge-symmetric.log \
-				hmc-pure-gauge-fa-sym.log \
-				hmc-pions.log \
-				gf-utils.log \
-				free-invert.log \
-				fit-corr.log \
-				fit-corr-2.log \
-				hlt-reconstruction.log \
-				mpi-utils.log \
-				mat-mpi-test.log
+		qcalc-psel-closest-dis-sqr.log \
+		qconvert-psel-txt-to-lati.log \
+		auto-cexprs.log \
+		auto-cexprs-more.log \
+		auto-cexprs-kpipi.log \
+		auto-cexprs-kpipi-qed.log \
+		auto-cexprs-uu.log \
+		auto-cexprs-cy.log \
+		auto-cexprs-more-cy.log \
+		auto-cexprs-kpipi-cy.log \
+		auto-cexprs-kpipi-qed-cy.log \
+		auto-cexprs-uu-cy.log \
+		auto-cexprs-distillation.log \
+		auto-contract-01.log \
+		auto-contract-02.log \
+		auto-contract-03.log \
+		auto-contract-04.log \
+		auto-contract-05.log \
+		auto-contract-06.log \
+		auto-contract-07.log \
+		mat-op-distillation.log \
+		mat-op-qcd.log \
+		check-id-node.log \
+		set-rand.log \
+		utils.log \
+		benchmark-matrix-functions.log \
+		make-sample-gauge-field.log \
+		lat-io.log \
+		lat-io-test1.log \
+		lat-io-test2.log \
+		jackknife-random.log \
+		jackknife-super.log \
+		jackknife-random-bench.log \
+		field-utils.log \
+		field-analysis.log \
+		field-multi-size.log \
+		field-selection.log \
+		fields-io.log \
+		fsel-psel.log \
+		psel-split.log \
+		selected-convert-io.log \
+		selected-field.log \
+		selected-shuffle.log \
+		test-qar.log \
+		hmc-pure-gauge.log \
+		hmc-pure-gauge-flowed.log \
+		hmc-pure-gauge-test.log \
+		hmc-pure-gauge-flowed-test.log \
+		hmc-pure-gauge-symmetric.log \
+		hmc-pure-gauge-fa-sym.log \
+		hmc-pions.log \
+		gf-utils.log \
+		free-invert.log \
+		fit-corr.log \
+		fit-corr-2.log \
+		hlt-reconstruction.log \
+		mpi-utils.log \
+		mat-mpi-test.log
 
 all: run
 
