--- a/qlat/qlat/field_types.pyx.in
+++ b/qlat/qlat/field_types.pyx.in
@@ -126,6 +126,12 @@ cdef class Field{{name}}(FieldBase):
     def swap_cast(self, FieldChar f1):
         return cc.qswap_cast(self.xx, f1.xx)
 
+    def swap_sp_cast(self, SelectedPointsChar f1, Geometry geo):
+        """
+        Only swap data. Does NOT affect f1.psel at all.
+        """
+        return cc.qswap_cast(self.xx, f1.xx, geo.xx)
+
     @property
     def total_site(self):
         cdef Coordinate x = Coordinate()
