--- a/qlat/qlat/field_types.pyx.in
+++ b/qlat/qlat/field_types.pyx.in
@@ -121,16 +121,16 @@ cdef class Field{{name}}(FieldBase):
         return cc.set_zero(self.xx)
 
     def swap(self, Field{{name}} f1):
-        return cc.qswap(self.xx, f1.xx)
+        cc.qswap(self.xx, f1.xx)
 
     def swap_cast(self, FieldChar f1):
-        return cc.qswap_cast(self.xx, f1.xx)
+        cc.qswap_cast(self.xx, f1.xx)
 
     def swap_sp_cast(self, SelectedPointsChar f1, Geometry geo):
         """
         Only swap data. Does NOT affect f1.psel at all.
         """
-        return cc.qswap_cast(self.xx, f1.xx, geo.xx)
+        cc.qswap_cast(self.xx, f1.xx, geo.xx)
 
     @property
     def total_site(self):
