--- a/qlat/qlat/include/qlat/vector_utils/meson.build
+++ b/qlat/qlat/include/qlat/vector_utils/meson.build
@@ -42,5 +42,6 @@ vector_utils_header_files = files(
   'utils_sector_funs.h',
   'utils_corr_sparse_baryon.h',
   'utils_geo_cache.h',
+  'utils_macro_defines.h',
   )
 py3.install_sources(vector_utils_header_files, subdir: 'qlat/include/qlat/vector_utils')
