correct geo comparison and rename

--- a/qlat/qlat/lib/meson.build
+++ b/qlat/qlat/lib/meson.build
@@ -24,6 +24,7 @@ cppsources = files(
   'dslash.cpp',
   'wilson-flow.cpp',
   'flowed-hmc.cpp',
+  'utils_geo_cache.cpp',
   )
 py3.install_sources(cppsources, subdir: 'qlat/lib')
 
