--- a/qlat-utils/qlat_utils/include/qlat-utils/meson.build
+++ b/qlat-utils/qlat_utils/include/qlat-utils/meson.build
@@ -53,7 +53,7 @@ header_files = files(
   'eigen.h',
   'eigen-sys.h',
   'env.h',
-  'endian.h',
+  'qendian.h',
   'handle.h',
   'lat-io.h',
   'mat.h',
