add missing head file and add RealDD matrix prod interfaces

--- a/qlat/qlat/include/qlat/vector_utils/meson.build
+++ b/qlat/qlat/include/qlat/vector_utils/meson.build
@@ -43,5 +43,6 @@ vector_utils_header_files = files(
   'utils_corr_sparse_baryon.h',
   'utils_geo_cache.h',
   'utils_macro_defines.h',
+  'utils_cg_iter.h',
   )
 py3.install_sources(vector_utils_header_files, subdir: 'qlat/include/qlat/vector_utils')
